# stapi-spec

./: .env  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  adrs.md  api-spec.md  docusaurus.config.ts  eslint.config.mjs  mkdocs.yml  openapi.yaml  package-lock.json  package.json  pyproject.toml  sprint-20220927.md  stapi.yaml  stat.yaml  terminology.md  versions.json
.github/workflows/: ci.yml  deploy.yml
community-sprints/: README.md  sprint2-philly.md
core/: README.md
demo/: LICENSE  README.md  requirements.txt
demo/api/: api_types.py  (+2 more)
dev/: 404.html  index.html  sitemap.xml
docs/: 00-stapi-intro.md  README.md  api-spec.md  api.md  intro.md
examples/: BlackSky-product-example.json  OpenCosmosOpportunityReqResp.json  OpportunityCollection.json  OpportunityCollectionOpenCosmos.json  OpportunityCollectionV2.json  OpportunityRequestV2.json  Order.json  ProductCollection.json  ProductCollectionEusi.json  ProductCollectionOneatlas.json  ProductCollectionOpenCosmos.json  ProductCollectionPlanet.json  ProductCollectionSatVu.json  ProductCollectionUmbra.json  ProductQueryables.json  SatellogicProduct.json  collections_planet.md
feasibility/: README.md
hooks/: copyright_year.py  redoc.py
implementations/: implementations.md
opportunity/: README.md
opportunity-spec/: README.md
order/: README.md
order-spec/: README.md
order-status/: README.md
product/: README.md
product-spec/: README.md  product-spec.md
spec/: README.md
v0.1.0/: 404.html  index.html  sitemap.xml
(+176 files in other folders)
